minor styling fixes. report idea as button. text wrap for description, comments. Minor styling for table in user profile, still to be worked on?

--- a/HandprintGenerator/static/css/handprintgenerator.css
+++ b/HandprintGenerator/static/css/handprintgenerator.css
@@ -581,3 +581,25 @@ background-color: #CFF294;
   text-align: right;
 }
 
+/* text wrapping so text does not going outside of box */
+
+h4 {
+  word-wrap: break-word;
+}
+
+p {
+  word-wrap: break-word;
+}
+
+td {
+  white-space: -o-pre-wrap; 
+  word-wrap: break-word;
+  white-space: -moz-pre-wrap; 
+  white-space: -pre-wrap; 
+
+}
+
+table { 
+  table-layout: fixed;
+  width: 100%
+}
